--- a/js/specs/run.html
+++ b/js/specs/run.html
@@ -4,35 +4,35 @@
 <head>
   <title>Jasmine Spec Runner</title>
 
-  <link rel="shortcut icon" type="image/png" href="/jasmine/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="/jasmine/jasmine.css">
-  <script type="text/javascript" src="/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="/jasmine/jasmine-html.js"></script>
+  <link rel="shortcut icon" type="image/png" href="external/jasmine/jasmine_favicon.png">
+  <link rel="stylesheet" type="text/css" href="external/jasmine/jasmine.css">
+  <script type="text/javascript" src="external/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="external/jasmine/jasmine-html.js"></script>
 
-	<script src="/json2.js"></script>
-	<script type="text/javascript" src="/jquery/jquery-1.7.2.js"></script>
-	<script type="text/javascript" src="/underscore.js"></script>
-	<script type="text/javascript" src="/underscore_plus.js"></script>
-	<!--<script type="text/javascript" src="/canjs/hashchange.js"></script>-->
-	<script type='text/javascript' src='/steal/steal-121115.js'></script>
-	<script type="text/javascript" src="/canjs-1.1.0/can.jquery.js"></script>
-	<script type="text/javascript" src="/canjs-1.1.0/can.control.plugin.js"></script>
-	<script type="text/javascript" src="/canjs-1.1.0/can.construct.super.js"></script>
-	<script type="text/javascript" src="/canjs-1.1.0/can.control.view.js"></script>
-	<script type="text/javascript" src="/canjs-1.1.0/can.view.modifiers.js"></script>
-	<script type="text/javascript" src="/canjs-1.1.0/can.observe.attributes.js"></script>
+	<script src="external/json2.js"></script>
+	<script type="text/javascript" src="external/jquery/jquery-1.7.2.js"></script>
+	<script type="text/javascript" src="external/underscore.js"></script>
+	<script type="text/javascript" src="external/underscore_plus.js"></script>
 
-	<script type="text/javascript" src="/kojac/src/can_extensions.js"></script>
-	<script type="text/javascript" src="/kojac/src/kojac.js"></script>
-	<script type="text/javascript" src="/kojac/src/kojac_canjs.js"></script>
+	<script type='text/javascript' src='external/steal/steal-121115.js'></script>
+	<script type="text/javascript" src="external/canjs-1.1.0/can.jquery.js"></script>
+	<script type="text/javascript" src="external/canjs-1.1.0/can.control.plugin.js"></script>
+	<script type="text/javascript" src="external/canjs-1.1.0/can.construct.super.js"></script>
+	<script type="text/javascript" src="external/canjs-1.1.0/can.control.view.js"></script>
+	<script type="text/javascript" src="external/canjs-1.1.0/can.view.modifiers.js"></script>
+	<script type="text/javascript" src="external/canjs-1.1.0/can.observe.attributes.js"></script>
 
-	<script type="text/javascript" src="/kojac/specs/kojac_object_spec.js"></script>
-	<script type="text/javascript" src="/kojac/specs/kojac_model_spec.js"></script>
-	<script type="text/javascript" src="/kojac/specs/handler_stack_spec.js"></script>
-	<script type="text/javascript" src="/kojac/specs/kojac_caching_spec.js"></script>
-	<script type="text/javascript" src="/kojac/specs/can_cache_spec.js"></script>
-	<script type="text/javascript" src="/kojac/specs/can_model_spec.js"></script>
-	<script type="text/javascript" src="/kojac/specs/can_factory_spec.js"></script>
+	<script type="text/javascript" src="../src/can_extensions.js"></script>
+	<script type="text/javascript" src="../src/kojac.js"></script>
+	<script type="text/javascript" src="../src/kojac_canjs.js"></script>
+
+    <script type="text/javascript" src="kojac_object_spec.js"></script>
+    <script type="text/javascript" src="kojac_model_spec.js"></script>
+    <script type="text/javascript" src="handler_stack_spec.js"></script>
+    <script type="text/javascript" src="kojac_caching_spec.js"></script>
+	<script type="text/javascript" src="can_cache_spec.js"></script>
+	<script type="text/javascript" src="can_model_spec.js"></script>
+	<script type="text/javascript" src="can_factory_spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
