got ember_model_spec.js passing with Ember RC5

--- a/js/specs/run.html
+++ b/js/specs/run.html
@@ -22,6 +22,8 @@
 	<script type="text/javascript" src="external/canjs-1.1.0/can.view.modifiers.js"></script>
 	<script type="text/javascript" src="external/canjs-1.1.0/can.observe.attributes.js"></script>
 
+	<script type="text/javascript" src="external/ember/ember-1.0.0-rc.5.js"></script>
+
 	<script type="text/javascript" src="../src/can_extensions.js"></script>
 	<script type="text/javascript" src="../src/kojac.js"></script>
 	<script type="text/javascript" src="../src/kojac_canjs.js"></script>
@@ -33,6 +35,10 @@
 	<script type="text/javascript" src="can_cache_spec.js"></script>
 	<script type="text/javascript" src="can_model_spec.js"></script>
 	<script type="text/javascript" src="can_factory_spec.js"></script>
+
+	<script type="text/javascript" src="../src/kojac_ember.js"></script>
+	<script type="text/javascript" src="ember_model_spec.js"></script>
+	<!--<script type="text/javascript" src="ember_factory_spec.js"></script>-->
 
 	<script type="text/javascript">
     (function() {
