got ember_factory_spec.js passing with Ember RC5

--- a/js/specs/run.html
+++ b/js/specs/run.html
@@ -38,7 +38,7 @@
 
 	<script type="text/javascript" src="../src/kojac_ember.js"></script>
 	<script type="text/javascript" src="ember_model_spec.js"></script>
-	<!--<script type="text/javascript" src="ember_factory_spec.js"></script>-->
+	<script type="text/javascript" src="ember_factory_spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
