--- a/js/specs/run.html
+++ b/js/specs/run.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="external/jasmine/jasmine-html.js"></script>
 
 	<script src="external/json2.js"></script>
-	<script type="text/javascript" src="external/jquery/jquery-1.7.2.js"></script>
+	<script type="text/javascript" src="external/jquery/jquery-1.9.1.js"></script>
 	<script type="text/javascript" src="external/underscore.js"></script>
 	<script type="text/javascript" src="external/underscore_plus.js"></script>
 
@@ -41,6 +41,7 @@
 	<script type="text/javascript" src="ember_factory_spec.js"></script>
 
 	<script type="text/javascript" src="kojac_operations_spec.js"></script>
+	<script type="text/javascript" src="kojac_mock_spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
