--- a/js/specs/run.html
+++ b/js/specs/run.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src="external/canjs-1.1.0/can.view.modifiers.js"></script>
 	<script type="text/javascript" src="external/canjs-1.1.0/can.observe.attributes.js"></script>
 
+	<script type="text/javascript" src="external/ember/handlebars-1.0.0-rc.4.js"></script>
 	<script type="text/javascript" src="external/ember/ember-1.0.0-rc.5.js"></script>
 
 	<script type="text/javascript" src="../src/can_extensions.js"></script>
