--- a/js/specs/run.html
+++ b/js/specs/run.html
@@ -43,6 +43,7 @@
 
 	<script type="text/javascript" src="kojac_operations_spec.js"></script>
 	<script type="text/javascript" src="kojac_mock_spec.js"></script>
+	<script type="text/javascript" src="operation_include_spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
