commented out CanJS specs - CanJS support suspended for now. Using EmberJS

--- a/spec/run.html
+++ b/spec/run.html
@@ -9,35 +9,35 @@
   <script type="text/javascript" src="external/jasmine/jasmine.js"></script>
   <script type="text/javascript" src="external/jasmine/jasmine-html.js"></script>
 
-	<script src="external/json2.js"></script>
-	<script type="text/javascript" src="external/jquery/jquery-1.9.1.js"></script>
-	<script type="text/javascript" src="external/underscore.js"></script>
-	<script type="text/javascript" src="external/underscore_plus.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.2.4/json3.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore.js"></script>
+	<script type="text/javascript" src="http://raw.github.com/buzzware/underscore_plus/master/app/assets/javascripts/underscore_plus.js"></script>
 
-	<script type='text/javascript' src='external/steal/steal-121115.js'></script>
-	<script type="text/javascript" src="external/canjs-1.1.0/can.jquery.js"></script>
-	<script type="text/javascript" src="external/canjs-1.1.0/can.control.plugin.js"></script>
-	<script type="text/javascript" src="external/canjs-1.1.0/can.construct.super.js"></script>
-	<script type="text/javascript" src="external/canjs-1.1.0/can.control.view.js"></script>
-	<script type="text/javascript" src="external/canjs-1.1.0/can.view.modifiers.js"></script>
-	<script type="text/javascript" src="external/canjs-1.1.0/can.observe.attributes.js"></script>
+	<!--<script type='text/javascript' src='https://raw.github.com/bitovi/steal/0a8113ec6404f3287dcf370216a439d650cc3f61/steal.js'></script>-->
+	<!--<script type="text/javascript" src="http://cloud.github.com/downloads/bitovi/canjs/can.jquery-1.1.0.js"></script>-->
+	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/control/plugin/plugin.js"></script>-->
+	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/construct/super/super.js"></script>-->
+	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/control/view/view.js"></script>-->
+	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/view/modifiers/modifiers.js"></script>-->
+	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/observe/attributes/attributes.js"></script>-->
 
-	<script type="text/javascript" src="external/ember/handlebars-1.0.0-rc.4.js"></script>
-	<script type="text/javascript" src="external/ember/ember-1.0.0-rc.6.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.4/handlebars.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.0-rc.6/ember.js"></script>
 
-	<script type="text/javascript" src="../src/can_extensions.js"></script>
-	<script type="text/javascript" src="../src/kojac.js"></script>
-	<script type="text/javascript" src="../src/kojac_canjs.js"></script>
+	<!--<script type="text/javascript" src="../app/assets/javascripts/can_extensions.js"></script>-->
+	<script type="text/javascript" src="../app/assets/javascripts/kojac.js"></script>
+	<!--<script type="text/javascript" src="../app/assets/javascripts/kojac_canjs.js"></script>-->
 
     <script type="text/javascript" src="kojac_object_spec.js"></script>
     <script type="text/javascript" src="kojac_model_spec.js"></script>
     <script type="text/javascript" src="handler_stack_spec.js"></script>
     <script type="text/javascript" src="kojac_caching_spec.js"></script>
-	<script type="text/javascript" src="can_cache_spec.js"></script>
-	<script type="text/javascript" src="can_model_spec.js"></script>
-	<script type="text/javascript" src="can_factory_spec.js"></script>
+	<!--<script type="text/javascript" src="can_cache_spec.js"></script>-->
+	<!--<script type="text/javascript" src="can_model_spec.js"></script>-->
+	<!--<script type="text/javascript" src="can_factory_spec.js"></script>-->
 
-	<script type="text/javascript" src="../src/kojac_ember.js"></script>
+	<script type="text/javascript" src="../app/assets/javascripts/kojac_ember.js"></script>
 	<script type="text/javascript" src="ember_model_spec.js"></script>
 	<script type="text/javascript" src="ember_factory_spec.js"></script>
 
