added date support using momentjs

--- a/spec/run.html
+++ b/spec/run.html
@@ -12,7 +12,8 @@
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/json3/3.2.4/json3.min.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.3/underscore.js"></script>
-	<script type="text/javascript" src="http://raw.github.com/buzzware/underscore_plus/master/app/assets/javascripts/underscore_plus.js"></script>
+	<script type="text/javascript" src="../spec/external/underscore_plus.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.2.1/moment.js"></script>
 
 	<!--<script type='text/javascript' src='https://raw.github.com/bitovi/steal/0a8113ec6404f3287dcf370216a439d650cc3f61/steal.js'></script>-->
 	<!--<script type="text/javascript" src="http://cloud.github.com/downloads/bitovi/canjs/can.jquery-1.1.0.js"></script>-->
@@ -45,6 +46,7 @@
 	<script type="text/javascript" src="kojac_operations_spec.js"></script>
 	<script type="text/javascript" src="kojac_mock_spec.js"></script>
 	<script type="text/javascript" src="operation_include_spec.js"></script>
+	<script type="text/javascript" src="type_conversion_spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
