--- a/spec/run.html
+++ b/spec/run.html
@@ -26,6 +26,8 @@
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.4/handlebars.js"></script>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.0-rc.6/ember.js"></script>
 
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jStorage/0.4.4/jstorage.min.js"></script>
+
 	<!--<script type="text/javascript" src="../app/assets/javascripts/can_extensions.js"></script>-->
 	<script type="text/javascript" src="../app/assets/javascripts/kojac.js"></script>
 	<!--<script type="text/javascript" src="../app/assets/javascripts/kojac_canjs.js"></script>-->
@@ -47,6 +49,7 @@
 	<script type="text/javascript" src="kojac_mock_spec.js"></script>
 	<script type="text/javascript" src="operation_include_spec.js"></script>
 	<script type="text/javascript" src="type_conversion_spec.js"></script>
+	<script type="text/javascript" src="local_provider_spec.js"></script>
 
 	<script type="text/javascript">
     (function() {
