--- a/spec/run.html
+++ b/spec/run.html
@@ -23,8 +23,8 @@
 	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/view/modifiers/modifiers.js"></script>-->
 	<!--<script type="text/javascript" src="https://raw.github.com/bitovi/canjs/v1.1.0/observe/attributes/attributes.js"></script>-->
 
-	<script type="text/javascript" src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v1.1.2.js"></script>
-	<script type="text/javascript" src="http://builds.emberjs.com/tags/v1.2.0/ember.js"></script>
+	<script type="text/javascript" src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v1.3.0.js"></script>
+	<script type="text/javascript" src="http://builds.emberjs.com/tags/v1.6.0-beta.3/ember.js"></script>
 
 	<!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.4/handlebars.js"></script>-->
 	<!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.0-rc.6/ember.js"></script>-->
@@ -45,6 +45,7 @@
 	<!--<script type="text/javascript" src="can_factory_spec.js"></script>-->
 
 	<script type="text/javascript" src="../app/assets/javascripts/kojac_ember.js"></script>
+	<script type="text/javascript" src="ember_override_spec.js"></script>
 	<script type="text/javascript" src="ember_model_spec.js"></script>
 	<script type="text/javascript" src="ember_factory_spec.js"></script>
 	<script type="text/javascript" src="ember_tojsono_spec.js"></script>
