--- a/spec/run.html
+++ b/spec/run.html
@@ -39,7 +39,7 @@
     <script type="text/javascript" src="kojac_model_spec.js"></script>
     <script type="text/javascript" src="handler_stack_spec.js"></script>
 	<script type="text/javascript" src="kojac_caching_spec.js"></script>
-	<script type="text/javascript" src="error_handling_spec.js"></script>
+	<!--<script type="text/javascript" src="error_handling_spec.js"></script>-->
 	<!--<script type="text/javascript" src="can_cache_spec.js"></script>-->
 	<!--<script type="text/javascript" src="can_model_spec.js"></script>-->
 	<!--<script type="text/javascript" src="can_factory_spec.js"></script>-->
